--- a/style_mobile.css
+++ b/style_mobile.css
@@ -26,6 +26,10 @@
     }
 
     .credits {
-        font-size: 0.5em;
+        font-size: 0.4em;
+    }
+
+    #version {
+        font-size: 0.1em;
     }
 }
