--- a/style_pc.css
+++ b/style_pc.css
@@ -126,7 +126,11 @@ button {
 }
 
 #version {
-    font-size: 0.2em;
+    position: fixed;
+    font-size: 0.6em;
+    left: 10px;
+    bottom: 10px;
+    color: rgb(205,178,130);
 }
 
 a {
