styling, try to fix viewport

--- a/style.css
+++ b/style.css
@@ -13,6 +13,8 @@ body {
     transition: 0.3s;
     font-family: gifont;
     height: 100%;
+    position: absolute;
+    width: 100vw;
 }
 
 button {
