--- a/style_mobile.css
+++ b/style_mobile.css
@@ -1,10 +1,9 @@
-@media only screen and (max-width: 800px), (orientation: landscape) (pointer:none), (pointer:coarse) {
+@media only screen and (max-width: 600px), (orientation: landscape) (pointer:none), (pointer:coarse) {
     html {
         font-size: 0.7em;
     }
 
     #video-bg {
-        /* left: -198px; */
         left: -22%;
     }
 
@@ -34,5 +33,11 @@
         font-size: 0.1em;
         left: 5px;
         bottom: 5px;
+    }
+}
+
+@media only screen and (max-width: 800px), (orientation: landscape) (pointer:none), (pointer:coarse) {
+    #video-bg {
+        left: 0;
     }
 }
