--- a/style_mobile.css
+++ b/style_mobile.css
@@ -1,10 +1,10 @@
-@media only screen and (max-width: 600px), (orientation: landscape), (pointer:none), (pointer:coarse) {
+@media screen and (max-device-width: 800px), (orientation: landscape), (pointer:none), (pointer:coarse) {
     html {
         font-size: 0.7em;
     }
 
     #video-bg {
-        left: -22%;
+        left: 0;
     }
 
     .c1 {
@@ -36,8 +36,8 @@
     }
 }
 
-@media only screen (max-device-width: 800px), (orientation: landscape), (pointer:none), (pointer:coarse) {
+@media screen and (max-device-width: 600px), (orientation: landscape), (pointer:none), (pointer:coarse) {
     #video-bg {
-        left: 0;
+        left: -22%;
     }
 }
