--- a/style_mobile.css
+++ b/style_mobile.css
@@ -1,4 +1,5 @@
-@media only screen and (max-width: 600px), (orientation: landscape) (pointer:none), (pointer:coarse) {
+/* @media only screen and (max-width: 600px), (orientation: landscape) (pointer:none), (pointer:coarse) { */
+@media only screen and (min-device-width: 375px) and (max-device-width: 890px) and (orientation: landscape) {
     html {
         font-size: 0.7em;
     }
