--- a/gowreader_mobile.css
+++ b/gowreader_mobile.css
@@ -22,8 +22,12 @@
     }
 
     .c3 {
-        padding: 20px 20px 50px 40px;
+        padding: 20px 20px 60px 40px;
         font-size: 1.1em;
+    }
+
+    .c3 #vl-title {
+        margin-bottom: 18px;
     }
 
     .credits {
